# ChangeLog for gnome-extra/gnome-user-share
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-user-share/ChangeLog,v 1.37 2014/05/27 06:51:19 pacho Exp $

  27 May 2014; Pacho Ramos <pacho@gentoo.org> -gnome-user-share-3.10.1.ebuild,
  gnome-user-share-3.10.2.ebuild:
  Needs to be rebuilt with gnome-bluetooth updates, drop old

  04 May 2014; Pacho Ramos <pacho@gentoo.org> gnome-user-share-3.10.2.ebuild:
  x86 stable, bug 508862

  04 May 2014; Pacho Ramos <pacho@gentoo.org> gnome-user-share-3.10.2.ebuild:
  amd64 stable, bug 508862

  02 May 2014; Pacho Ramos <pacho@gentoo.org> gnome-user-share-3.10.2.ebuild:
  Rely on bluez5 instead of obsolete obex-data-server that is bluez4 only

*gnome-user-share-3.10.2 (29 Mar 2014)

  29 Mar 2014; Pacho Ramos <pacho@gentoo.org> +gnome-user-share-3.10.2.ebuild,
  -gnome-user-share-3.8.3.ebuild:
  Version bump, drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> gnome-user-share-3.10.1.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> gnome-user-share-3.10.1.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> gnome-user-share-3.10.1.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> gnome-user-share-3.10.1.ebuild:
  arch stable, bug 888

*gnome-user-share-3.10.1 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +gnome-user-share-3.10.1.ebuild,
  -gnome-user-share-3.0.4.ebuild, -gnome-user-share-3.8.0.ebuild:
  Version bump for Gnome 3.10

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> gnome-user-share-3.8.3.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> gnome-user-share-3.8.3.ebuild:
  amd64 stable, bug #478252

*gnome-user-share-3.8.3 (17 Jul 2013)

  17 Jul 2013; Pacho Ramos <pacho@gentoo.org> +gnome-user-share-3.8.3.ebuild:
  Version bump

  29 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>