@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-user-share/ChangeLog,v 1.37 2014/05/27 06:51:19 pacho Exp $
 
+  23 Jul 2014; Poncho <poncho@spahan.ch> gnome-user-share-3.10.2.ebuild:
+  gnome-extra/gnome-user-share: add epatch_user
+
   27 May 2014; Pacho Ramos <pacho@gentoo.org> -gnome-user-share-3.10.1.ebuild,
   gnome-user-share-3.10.2.ebuild:
   Needs to be rebuilt with gnome-bluetooth updates, drop old
